# S-Loth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: app.cmake
apps/s-loth_main/: CMakeLists.txt  main.cpp
cmake/: FindGLUT.cmake  FindSOIL.cmake
resources/shaders/: cloth.frag.glsl  cloth.vert.glsl  sphere.frag.glsl  sphere.vert.glsl
source/: CMakeLists.txt
source/include/camera/: Camera.h
source/include/cloth/: clothSystem.h  headers.hpp  particleData.hpp  particleEffects.hpp  particleEmitter.hpp  particleGenerators.hpp  particleHeaders.hpp  particleRenderer.hpp  particleSystem.hpp  particleUpdaters.hpp
source/include/imgui/: imgui_impl_opengl3.h
source/include/object/: object.hpp
source/include/shaders/: SimpleShaders.h  TextureShaders.h
source/src/camera/: Camera.cpp
source/src/cloth/: clothSystem.cpp  particleData.cpp  particleEffects.cpp  particleEmitter.cpp  particleGenerators.cpp  particleRenderer.cpp  particleSystem.cpp  particleUpdaters.cpp
source/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_freeglut.cpp  imgui_impl_opengl2.cpp  imgui_widgets.cpp
source/src/object/: object.cpp
source/src/shaders/: SimpleShaders.cpp  TextureShaders.cpp
